# brain_behavior

./: KLB_MCMC_female.csv  KLB_MCMC_male.csv  KLB_bayesian.R  KL_mcmc_vs_bottleneck.html  KL_vs_bottleneck.py  Manifest.toml  Project.toml  README.md  SVM_behaviour.ipynb  SVR_Behavior.py  TODO.md  Untitled.ipynb  Untitled1.ipynb  behav_female_mds.csv  behav_male_mds.csv  behav_mds.csv  behaviour-Copy1.ipynb  behaviour_analysis_all.py  bottleneck_matrix.csv  brain_behavior_all_analysis.py  brain_morpho_vs_LS.py  causal_inference.ipynb  classical_descriptor.ipynb  copula_all_multilevel.ipynb  copula_micormodel.ipynb  create_annotation.py  data_female.csv  data_male.csv  data_na.csv  delta_analysis.py  delta_kl.R  delta_kl.jl  delta_kl_normal.jl  dgrpool_behav.R  dgrpool_brain_behavior_female.csv  entropy_vol_sep2023.csv  environment.yaml  extract_behaviour.py  formatted_sumamry.csv  good_bayesian_anova.py  (+26 more)
.ipynb_checkpoints/: KL_vs_bottleneck-checkpoint.py  SVM_behaviour-checkpoint.ipynb  Untitled-checkpoint.ipynb  Volume_entropy_kl-checkpoint.ipynb  bad_stats_anova-checkpoint.py  bayesian_analysis-checkpoint.py  bb_clusters-checkpoint.py  behav_male_mds-checkpoint.csv  behaviour-Copy1-checkpoint.ipynb  behaviourSVM-checkpoint.ipynb  behaviour_analysis_all-checkpoint.py  classical_descriptor-checkpoint.csv  classical_descriptor-checkpoint.ipynb  dgrpool_brain_behavior_male-checkpoint.csv  dgrpool_kl_behaviour-checkpoint.tsv  env-checkpoint.yml  formatted_sumamry-checkpoint.csv  hierarchical-checkpoint.ipynb  kl_matrix_new_working-checkpoint.csv  plot_entropy_3D-checkpoint.py  (+5 more)
(+27 files in other folders)
