[tool.poetry]
name = "brain-behavior"
version = "0.1.0"
description = ""
authors = ["Samuel Bourgeat <samuel.kumar@hotmail.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pymc = "4"
scipy = "^1.12.0"
numpy = "^1.26.4"
umap = "^0.1.1"
plotly = "^5.19.0"
pandas = "^2.2.1"
scikit-learn = "^1.4.1.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
