[tool.poetry]
name = "brain-behavior"
version = "0.1.0"
description = ""
authors = ["Samuel Bourgeat <samuel.kumar@hotmail.fr>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pymc = "^5.10.4"
jupyter = "^1.0.0"
graphviz = "^0.20.1"
seaborn = "^0.13.2"
scikit-learn = "^1.4.1.post1"
plotly = "^5.20.0"
plotly-express = "^0.4.1"
bambi = "^0.13.0"
dowhy = "^0.11.1"
umap-learn = "^0.5.5"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
